--- a/packages/flutter_image_compress_web/pubspec.yaml
+++ b/packages/flutter_image_compress_web/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
 
   flutter_image_compress_platform_interface: ^1.0.5
   js: '>=0.6.0 <0.8.0'
+  universal_html: ^2.2.4
 
 dev_dependencies:
   flutter_test:
